fix: Odin Logo image is now visible
- Change href in <img> to src
- Add title to sidebar

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,8 @@
 * {
   margin: 0px;
   padding: 0px;
+
+  font-family: 'Courier New', Courier, monospace;
 }
 
 :root {
@@ -21,8 +23,8 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  width: 40vw;
-  height: 100vh;
+  width: 35vw;
+  height: 120vh;
   background-image: url("../img/maximalfocus-HakTxidk36I-unsplash.jpg");
   background-size: cover;
 }
@@ -36,14 +38,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 25vh;
   width: inherit;
   height: 15vh;
   background-color: rgba(40, 40, 40, 0.8);
 }
 
 .sidebar__logo__image {
-  width: 80%; 
-  height: 80%;
+  width: 15%;
+  height: auto;
 }
 
+.sidebar__logo__text {
+  font-size: 3rem;
+}
 
